@@ -21,22 +21,22 @@ import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
-import com.mongodb.BasicDBList;
-import com.mongodb.BasicDBObject;
-import com.mongodb.DBCursor;
-import com.mongodb.DBObject;
-import com.mongodb.QueryBuilder;
-import com.mongodb.WriteResult;
-import com.mongodb.client.model.Projections;
+import com.mongodb.client.MongoCollection;
+import com.mongodb.client.model.ReplaceOptions;
+import com.mongodb.client.result.UpdateResult;
 import jakarta.annotation.Nonnull;
 import jakarta.inject.Inject;
+import org.bson.Document;
+import org.bson.conversions.Bson;
 import org.bson.types.ObjectId;
 import org.graylog.security.entities.EntityOwnershipService;
-import org.graylog2.database.MongoConnection;
+import org.graylog2.database.MongoCollections;
+import org.graylog2.database.MongoEntity;
 import org.graylog2.database.NotFoundException;
-import org.graylog2.database.PersistedServiceImpl;
+import org.graylog2.database.utils.MongoUtils;
 import org.graylog2.events.ClusterEventBus;
 import org.graylog2.indexer.IndexSet;
 import org.graylog2.indexer.MongoIndexSet;
@@ -51,13 +51,16 @@ import org.graylog2.plugin.streams.StreamRule;
 import org.graylog2.rest.resources.streams.requests.CreateStreamRequest;
 import org.graylog2.streams.events.StreamDeletedEvent;
 import org.graylog2.streams.events.StreamsChangedEvent;
+import org.joda.time.DateTime;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nullable;
+import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.Date;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
@@ -68,20 +71,35 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static com.mongodb.client.model.Filters.eq;
-import static com.mongodb.client.model.Projections.excludeId;
-import static com.mongodb.client.model.Projections.fields;
-import static com.mongodb.client.model.Projections.include;
+import static com.mongodb.client.model.Filters.in;
+import static com.mongodb.client.model.Updates.addEachToSet;
+import static com.mongodb.client.model.Updates.pull;
+import static com.mongodb.client.model.Updates.set;
+import static org.graylog2.database.utils.MongoUtils.idEq;
+import static org.graylog2.database.utils.MongoUtils.idsIn;
+import static org.graylog2.database.utils.MongoUtils.stream;
+import static org.graylog2.database.utils.MongoUtils.stringIdsIn;
 import static org.graylog2.shared.utilities.StringUtils.f;
-import static org.graylog2.streams.StreamImpl.FIELD_ID;
-import static org.graylog2.streams.StreamImpl.FIELD_INDEX_SET_ID;
-import static org.graylog2.streams.StreamImpl.FIELD_TITLE;
+import static org.graylog2.streams.StreamDTO.FIELD_CATEGORIES;
+import static org.graylog2.streams.StreamDTO.FIELD_CONTENT_PACK;
+import static org.graylog2.streams.StreamDTO.FIELD_CREATED_AT;
+import static org.graylog2.streams.StreamDTO.FIELD_CREATOR_USER_ID;
+import static org.graylog2.streams.StreamDTO.FIELD_DESCRIPTION;
+import static org.graylog2.streams.StreamDTO.FIELD_DISABLED;
+import static org.graylog2.streams.StreamDTO.FIELD_INDEX_SET_ID;
+import static org.graylog2.streams.StreamDTO.FIELD_MATCHING_TYPE;
+import static org.graylog2.streams.StreamDTO.FIELD_OUTPUTS;
+import static org.graylog2.streams.StreamDTO.FIELD_REMOVE_MATCHES_FROM_DEFAULT_STREAM;
+import static org.graylog2.streams.StreamDTO.FIELD_TITLE;
 
-public class StreamServiceImpl extends PersistedServiceImpl implements StreamService {
+public class StreamServiceImpl implements StreamService {
     private static final Logger LOG = LoggerFactory.getLogger(StreamServiceImpl.class);
+    private static final String COLLECTION_NAME = "streams";
+    private final MongoCollection<StreamDTO> collection;
+    private final MongoUtils<StreamDTO> mongoUtils;
     private final StreamRuleService streamRuleService;
     private final OutputService outputService;
     private final IndexSetService indexSetService;
@@ -92,7 +110,7 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
     private final LoadingCache<String, String> streamTitleCache;
 
     @Inject
-    public StreamServiceImpl(MongoConnection mongoConnection,
+    public StreamServiceImpl(MongoCollections mongoCollections,
                              StreamRuleService streamRuleService,
                              OutputService outputService,
                              IndexSetService indexSetService,
@@ -100,7 +118,8 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
                              EntityOwnershipService entityOwnershipService,
                              ClusterEventBus clusterEventBus,
                              Set<StreamDeletionGuard> streamDeletionGuards) {
-        super(mongoConnection);
+        this.collection = mongoCollections.collection(COLLECTION_NAME, StreamDTO.class);
+        this.mongoUtils = mongoCollections.utils(collection);
         this.streamRuleService = streamRuleService;
         this.outputService = outputService;
         this.indexSetService = indexSetService;
@@ -109,7 +128,7 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
         this.clusterEventBus = clusterEventBus;
         this.streamDeletionGuards = streamDeletionGuards;
 
-        final CacheLoader<String, String> streamTitleLoader = new CacheLoader<String, String>() {
+        final CacheLoader<String, String> streamTitleLoader = new CacheLoader<>() {
             @Nonnull
             @Override
             public String load(@Nonnull String streamId) throws NotFoundException {
@@ -129,33 +148,12 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
     }
 
     @Nullable
-    private IndexSet getIndexSet(DBObject dbObject) {
-        return getIndexSet((String) dbObject.get(FIELD_INDEX_SET_ID));
-    }
-
-    @Nullable
     private IndexSet getIndexSet(String id) {
         if (isNullOrEmpty(id)) {
             return null;
         }
         final Optional<IndexSetConfig> indexSetConfig = indexSetService.get(id);
         return indexSetConfig.flatMap(c -> Optional.of(indexSetFactory.create(c))).orElse(null);
-    }
-
-    public Stream load(ObjectId id) throws NotFoundException {
-        final DBObject o = get(StreamImpl.class, id);
-
-        if (o == null) {
-            throw new NotFoundException("Stream <" + id + "> not found!");
-        }
-
-        final List<StreamRule> streamRules = streamRuleService.loadForStreamId(id.toHexString());
-
-        final Set<Output> outputs = loadOutputsForRawStream(o);
-
-        @SuppressWarnings("unchecked")
-        final Map<String, Object> fields = o.toMap();
-        return new StreamImpl((ObjectId) o.get(StreamImpl.FIELD_ID), fields, streamRules, outputs, getIndexSet(o));
     }
 
     @Override
@@ -167,13 +165,13 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
     public Stream create(CreateStreamRequest cr, String userId) {
         Map<String, Object> streamData = Maps.newHashMap();
         streamData.put(FIELD_TITLE, cr.title().strip());
-        streamData.put(StreamImpl.FIELD_DESCRIPTION, cr.description());
-        streamData.put(StreamImpl.FIELD_CREATOR_USER_ID, userId);
-        streamData.put(StreamImpl.FIELD_CREATED_AT, Tools.nowUTC());
-        streamData.put(StreamImpl.FIELD_CONTENT_PACK, cr.contentPack());
-        streamData.put(StreamImpl.FIELD_MATCHING_TYPE, cr.matchingType().toString());
-        streamData.put(StreamImpl.FIELD_DISABLED, false);
-        streamData.put(StreamImpl.FIELD_REMOVE_MATCHES_FROM_DEFAULT_STREAM, cr.removeMatchesFromDefaultStream());
+        streamData.put(FIELD_DESCRIPTION, cr.description());
+        streamData.put(FIELD_CREATOR_USER_ID, userId);
+        streamData.put(FIELD_CREATED_AT, Tools.nowUTC());
+        streamData.put(FIELD_CONTENT_PACK, cr.contentPack());
+        streamData.put(FIELD_MATCHING_TYPE, cr.matchingType().toString());
+        streamData.put(FIELD_DISABLED, false);
+        streamData.put(FIELD_REMOVE_MATCHES_FROM_DEFAULT_STREAM, cr.removeMatchesFromDefaultStream());
         streamData.put(FIELD_INDEX_SET_ID, cr.indexSetId());
 
         return create(streamData);
@@ -182,7 +180,9 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
     @Override
     public Stream load(String id) throws NotFoundException {
         try {
-            return load(new ObjectId(id));
+            final StreamDTO dto = mongoUtils.getById(id)
+                    .orElseThrow(() -> new NotFoundException("Stream <" + id + "> not found!"));
+            return fromDTO(dto);
         } catch (IllegalArgumentException e) {
             throw new NotFoundException("Stream <" + id + "> not found!");
         }
@@ -190,18 +190,12 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
 
     @Override
     public List<Stream> loadAllEnabled() {
-        return loadAllEnabled(new HashMap<>());
-    }
-
-    public List<Stream> loadAllEnabled(Map<String, Object> additionalQueryOpts) {
-        additionalQueryOpts.put(StreamImpl.FIELD_DISABLED, false);
-
-        return loadAll(additionalQueryOpts);
+        return loadAllByQuery(eq(FIELD_DISABLED, false));
     }
 
     @Override
     public List<Stream> loadAllByTitle(String title) {
-        return loadAll(QueryBuilder.start(StreamImpl.FIELD_TITLE).is(title).get());
+        return loadAllByQuery(eq(FIELD_TITLE, title));
     }
 
     @Override
@@ -210,14 +204,8 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
             return Map.of();
         }
 
-        final var streamObjectIds = streamIds.stream().map(ObjectId::new).toList();
-        final var cursor = collection(StreamImpl.class).find(
-                new BasicDBObject("_id", new BasicDBObject("$in", streamObjectIds)),
-                new BasicDBObject("_id", 1).append("title", 1)
-        );
-        try (cursor) {
-            return cursorToList(cursor).stream()
-                    .collect(Collectors.toMap(i -> i.get("_id").toString(), i -> i.get("title").toString()));
+        try (var stream = stream(collection.find(stringIdsIn(streamIds)))) {
+            return stream.collect(Collectors.toMap(MongoEntity::id, StreamDTO::title));
         }
     }
 
@@ -233,19 +221,32 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
 
     @Override
     public List<Stream> loadAll() {
-        return loadAll(Collections.emptyMap());
+        return loadAllByQuery(new Document());
     }
 
-    public List<Stream> loadAll(Map<String, Object> additionalQueryOpts) {
-        final DBObject query = new BasicDBObject(additionalQueryOpts);
-        return loadAll(query);
+    @Override
+    public java.util.stream.Stream<String> streamAllIds() {
+        return stream(collection.find()).map(StreamDTO::id);
     }
 
-    private List<Stream> loadAll(DBObject query) {
-        final List<DBObject> results = query(StreamImpl.class, query);
+    @Override
+    public java.util.stream.Stream<StreamDTO> streamAllDTOs() {
+        return stream(collection.find());
+    }
+
+    @Override
+    public java.util.stream.Stream<StreamDTO> streamDTOByIds(Collection<String> streamIds) {
+        return stream(collection.find(stringIdsIn(streamIds)));
+    }
+
+    private List<Stream> loadAllByQuery(Bson query) {
+        final List<StreamDTO> results;
+        try (var stream = stream(collection.find(query))) {
+            results = stream.toList();
+        }
         final List<String> streamIds = results.stream()
-                .map(o -> o.get(StreamImpl.FIELD_ID).toString())
-                .collect(Collectors.toList());
+                .map(StreamDTO::id)
+                .toList();
         final Map<String, List<StreamRule>> allStreamRules = streamRuleService.loadForStreamIds(streamIds);
 
         final ImmutableList.Builder<Stream> streams = ImmutableList.builder();
@@ -253,7 +254,8 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
         final Map<String, IndexSet> indexSets = indexSetsForStreams(results);
 
         final Set<String> outputIds = results.stream()
-                .map(this::outputIdsForRawStream)
+                .map(StreamDTO::outputs)
+                .filter(Objects::nonNull)
                 .flatMap(outputs -> outputs.stream().map(ObjectId::toHexString))
                 .collect(Collectors.toSet());
 
@@ -262,45 +264,37 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
                 .collect(Collectors.toMap(Output::getId, Function.identity()));
 
 
-        for (DBObject o : results) {
-            final ObjectId objectId = (ObjectId) o.get(StreamImpl.FIELD_ID);
-            final String id = objectId.toHexString();
+        for (StreamDTO dto: results) {
+            final String id = dto.id();
             final List<StreamRule> streamRules = allStreamRules.getOrDefault(id, Collections.emptyList());
             LOG.debug("Found {} rules for stream <{}>", streamRules.size(), id);
 
-            final Set<Output> outputs = outputIdsForRawStream(o)
-                    .stream()
-                    .map(ObjectId::toHexString)
-                    .map(outputId -> {
-                        final Output output = outputsById.get(outputId);
-                        if (output == null) {
-                            final String streamTitle = Strings.nullToEmpty((String) o.get(FIELD_TITLE));
-                            LOG.warn("Stream \"" + streamTitle + "\" <" + id + "> references missing output <" + outputId + "> - ignoring output.");
-                        }
-                        return output;
-                    })
-                    .filter(Objects::nonNull)
-                    .collect(Collectors.toSet());
+            final Set<Output> outputs= new HashSet<>();
+            if (dto.outputs() != null) {
+                outputs.addAll(dto.outputs()
+                        .stream()
+                        .map(ObjectId::toHexString)
+                        .map(outputId -> {
+                            final Output output = outputsById.get(outputId);
+                            if (output == null) {
+                                final String streamTitle = Strings.nullToEmpty(dto.title());
+                                LOG.warn("Stream \"{}\" <{}> references missing output <{}> - ignoring output.", streamTitle, id, outputId);
+                            }
+                            return output;
+                        })
+                        .filter(Objects::nonNull)
+                        .collect(Collectors.toSet()));
+            }
 
-            @SuppressWarnings("unchecked")
-            final Map<String, Object> fields = o.toMap();
-
-            final String indexSetId = (String) fields.get(FIELD_INDEX_SET_ID);
-
-            streams.add(new StreamImpl(objectId, fields, streamRules, outputs, indexSets.get(indexSetId)));
+            streams.add(new StreamImpl(new ObjectId(id), StreamDTO.toMap(dto), streamRules, outputs, indexSets.get(dto.indexSetId())));
         }
 
         return streams.build();
     }
 
-    private List<ObjectId> outputIdsForRawStream(DBObject o) {
-        final List<ObjectId> objectIds = (List<ObjectId>) o.get(StreamImpl.FIELD_OUTPUTS);
-        return objectIds == null ? Collections.emptyList() : objectIds;
-    }
-
-    private Map<String, IndexSet> indexSetsForStreams(List<DBObject> streams) {
+    private Map<String, IndexSet> indexSetsForStreams(List<StreamDTO> streams) {
         final Set<String> indexSetIds = streams.stream()
-                .map(stream -> (String) stream.get(FIELD_INDEX_SET_ID))
+                .map(StreamDTO::indexSetId)
                 .filter(s -> !isNullOrEmpty(s))
                 .collect(Collectors.toSet());
         return indexSetService.findByIds(indexSetIds)
@@ -313,18 +307,13 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
         final Set<ObjectId> objectIds = streamIds.stream()
                 .map(ObjectId::new)
                 .collect(Collectors.toSet());
-        final DBObject query = QueryBuilder.start(StreamImpl.FIELD_ID).in(objectIds).get();
 
-        return ImmutableSet.copyOf(loadAll(query));
+        return ImmutableSet.copyOf(loadAllByQuery(idsIn(objectIds)));
     }
 
     @Override
-    public Set<String> mapCategoriesToIds(Collection<String> categories) {
-        final DBObject query = QueryBuilder.start(StreamImpl.FIELD_CATEGORIES).in(categories).get();
-        final DBObject onlyIdField = new BasicDBObject(Projections.include(FIELD_ID).toBsonDocument());
-        try (var cursor = collection(StreamImpl.class).find(query, onlyIdField); var stream = StreamSupport.stream(cursor.spliterator(), false)) {
-            return stream.map(s -> s.get(FIELD_ID).toString()).collect(Collectors.toSet());
-        }
+    public java.util.stream.Stream<String> mapCategoriesToIds(Collection<String> categories) {
+        return stream(collection.find(in(FIELD_CATEGORIES, categories))).map(StreamDTO::id);
     }
 
     @Override
@@ -337,17 +326,15 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
                 .filter(s -> !s.startsWith(Stream.DATASTREAM_PREFIX))
                 .map(ObjectId::new)
                 .collect(Collectors.toSet());
-        final DBObject query = QueryBuilder.start(StreamImpl.FIELD_ID).in(objectIds).get();
-        final DBObject onlyIndexSetIdField = new BasicDBObject(Projections.include(FIELD_INDEX_SET_ID).toBsonDocument());
-        Set<String> indexSets = StreamSupport.stream(collection(StreamImpl.class).find(query, onlyIndexSetIdField).spliterator(), false)
-                .map(s -> s.get(FIELD_INDEX_SET_ID).toString())
-                .collect(Collectors.toSet());
-        indexSets.addAll(dataStreamIds);
+        Set<String> indexSets = new HashSet<>(dataStreamIds);
+        try (var stream = stream(collection.find(idsIn(objectIds)))) {
+            indexSets.addAll(stream.map(StreamDTO::indexSetId).collect(Collectors.toSet()));
+        }
         return indexSets;
     }
 
-    protected Set<Output> loadOutputsForRawStream(DBObject stream) {
-        List<ObjectId> outputIds = outputIdsForRawStream(stream);
+    protected Set<Output> loadOutputsForRawStream(StreamDTO stream) {
+        Collection<ObjectId> outputIds = stream.outputs();
 
         Set<Output> result = new HashSet<>();
         if (outputIds != null) {
@@ -355,7 +342,7 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
                 try {
                     result.add(outputService.load(outputId.toHexString()));
                 } catch (NotFoundException e) {
-                    LOG.warn("Non-existing output <{}> referenced from stream <{}>!", outputId.toHexString(), stream.get(StreamImpl.FIELD_ID));
+                    LOG.warn("Non-existing output <{}> referenced from stream <{}>!", outputId.toHexString(), stream.id());
                 }
             }
         }
@@ -365,85 +352,66 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
 
     @Override
     public long count() {
-        return totalCount(StreamImpl.class);
+        return collection.countDocuments();
     }
 
     @Override
     public void destroy(Stream stream) throws NotFoundException, StreamGuardException {
-        checkDeletionguards(stream.getId());
+        checkDeletionGuards(stream.getId());
 
         for (StreamRule streamRule : streamRuleService.loadForStream(stream)) {
-            super.destroy(streamRule);
+            streamRuleService.destroy(streamRule);
         }
 
         final String streamId = stream.getId();
         // we need to remove notifications referencing this stream. This happens in the DeletedStreamNotificationListener
         // triggered by the StreamDeletedEvent below.
-        super.destroy(stream);
+        collection.deleteOne(idEq(stream.getId()));
 
         clusterEventBus.post(StreamsChangedEvent.create(streamId));
         clusterEventBus.post(StreamDeletedEvent.create(streamId));
         entityOwnershipService.unregisterStream(streamId);
     }
 
-    private void checkDeletionguards(String streamId) throws StreamGuardException {
+    private void checkDeletionGuards(String streamId) throws StreamGuardException {
         for (StreamDeletionGuard guard : streamDeletionGuards) {
             guard.checkGuard(streamId);
         }
     }
 
-    public void update(Stream stream, @Nullable String title, @Nullable String description) throws ValidationException {
-        if (title != null) {
-            stream.getFields().put(FIELD_TITLE, title);
-        }
-
-        if (description != null) {
-            stream.getFields().put(StreamImpl.FIELD_DESCRIPTION, description);
-        }
-
-        save(stream);
-    }
-
     @Override
     public void pause(Stream stream) throws ValidationException {
-        stream.setDisabled(true);
-        final String streamId = save(stream);
-        clusterEventBus.post(StreamsChangedEvent.create(streamId));
-    }
-
-    @Override
-    public void resume(Stream stream) throws ValidationException {
-        stream.setDisabled(false);
-        final String streamId = save(stream);
-        clusterEventBus.post(StreamsChangedEvent.create(streamId));
-    }
-
-    @Override
-    public void addOutput(Stream stream, Output output) {
-        collection(stream).update(
-                db(StreamImpl.FIELD_ID, new ObjectId(stream.getId())),
-                db("$addToSet", new BasicDBObject(StreamImpl.FIELD_OUTPUTS, new ObjectId(output.getId())))
-        );
+        collection.updateOne(idEq(stream.getId()), set(FIELD_DISABLED, true));
         clusterEventBus.post(StreamsChangedEvent.create(stream.getId()));
     }
 
     @Override
-    public void addOutputs(ObjectId streamId, Collection<ObjectId> outputIds) {
-        final BasicDBList outputs = new BasicDBList();
-        outputs.addAll(outputIds);
+    public void resume(Stream stream) throws ValidationException {
+        collection.updateOne(idEq(stream.getId()), set(FIELD_DISABLED, false));
+        clusterEventBus.post(StreamsChangedEvent.create(stream.getId()));
+    }
 
-        collection(StreamImpl.class).update(
-                db(StreamImpl.FIELD_ID, streamId),
-                db("$addToSet", new BasicDBObject(StreamImpl.FIELD_OUTPUTS, new BasicDBObject("$each", outputs)))
+    @Override
+    public void addOutput(Stream stream, Output output) {
+        addOutputs(new ObjectId(stream.getId()), List.of(new ObjectId(output.getId())));
+    }
+
+    @Override
+    public void addOutputs(ObjectId streamId, Collection<ObjectId> outputIds) {
+        final List<ObjectId> outputIdList = new ArrayList<>(outputIds);
+
+        collection.updateOne(
+                idEq(streamId),
+                addEachToSet(FIELD_OUTPUTS, outputIdList)
         );
         clusterEventBus.post(StreamsChangedEvent.create(streamId.toHexString()));
     }
 
     @Override
     public void removeOutput(Stream stream, Output output) {
-        collection(stream).update(
-                db(StreamImpl.FIELD_ID, new ObjectId(stream.getId())),
-                db("$pull", new BasicDBObject(StreamImpl.FIELD_OUTPUTS, new ObjectId(output.getId())))
+        collection.updateOne(
+                idEq(stream.getId()),
+                pull(FIELD_OUTPUTS, new ObjectId(output.getId()))
         );
 
         clusterEventBus.post(StreamsChangedEvent.create(stream.getId()));
@@ -452,58 +420,50 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
     @Override
     public void removeOutputFromAllStreams(Output output) {
         ObjectId outputId = new ObjectId(output.getId());
-        DBObject match = db(StreamImpl.FIELD_OUTPUTS, outputId);
-        DBObject modify = db("$pull", db(StreamImpl.FIELD_OUTPUTS, outputId));
+        Bson hasOutput = eq(FIELD_OUTPUTS, outputId);
+        Bson pullOutput = pull(FIELD_OUTPUTS, outputId);
 
         // Collect streams that will change before updating them because we don't get the list of changed streams
         // from the upsert call.
         final ImmutableSet<String> updatedStreams;
-        try (final DBCursor cursor = collection(StreamImpl.class).find(match)) {
-            updatedStreams = StreamSupport.stream(cursor.spliterator(), false)
-                    .map(stream -> stream.get(StreamImpl.FIELD_ID))
+        try (var stream = stream(collection.find(hasOutput))) {
+            updatedStreams = stream
+                    .map(StreamDTO::id)
                     .filter(Objects::nonNull)
-                    .map(id -> ((ObjectId) id).toHexString())
                     .collect(ImmutableSet.toImmutableSet());
         }
 
-        collection(StreamImpl.class).update(
-                match, modify, false, true
-        );
+        collection.updateMany(hasOutput, pullOutput);
 
         clusterEventBus.post(StreamsChangedEvent.create(updatedStreams));
     }
 
     @Override
     public List<Stream> loadAllWithIndexSet(String indexSetId) {
-        final Map<String, Object> query = db(FIELD_INDEX_SET_ID, indexSetId);
-        return loadAll(query);
+        return loadAllByQuery(eq(FIELD_INDEX_SET_ID, indexSetId));
     }
 
     @Override
     public void addToIndexSet(String indexSetId, Collection<String> streamIds) {
-        final Set<ObjectId> objectIds = streamIds.stream()
-                .map(ObjectId::new)
-                .collect(Collectors.toSet());
-        final var matchStreamIds = QueryBuilder.start(StreamImpl.FIELD_ID).in(objectIds).get();
-        var updateIndexSets = db("$set", db(FIELD_INDEX_SET_ID, indexSetId));
-        final WriteResult update = collection(StreamImpl.class).update(matchStreamIds, updateIndexSets, false, true);
+        final UpdateResult update = collection.updateMany(stringIdsIn(streamIds), set(FIELD_INDEX_SET_ID, indexSetId));
 
-        if (update.getN() < streamIds.stream().distinct().count()) {
+        if (update.getModifiedCount() < streamIds.stream().distinct().count()) {
             throw new IllegalStateException("Assigning streams " + streamIds + " to index set <" + indexSetId + "> failed!");
         }
     }
 
     @Override
     public String save(Stream stream) throws ValidationException {
-        final String savedStreamId = super.save(stream);
-        clusterEventBus.post(StreamsChangedEvent.create(savedStreamId));
+        final String id = stream.getId();
+        final StreamDTO dto = toDTO(stream);
+        collection.replaceOne(idEq(id), dto, new ReplaceOptions().upsert(true));
 
-        return savedStreamId;
+        return id;
     }
 
     @Override
     public String saveWithRulesAndOwnership(Stream stream, Collection<StreamRule> streamRules, User user) throws ValidationException {
-        final String savedStreamId = super.save(stream);
+        final String savedStreamId = save(stream);
         final Set<StreamRule> rules = streamRules.stream()
                 .map(rule -> streamRuleService.copy(savedStreamId, rule))
                 .collect(Collectors.toSet());
@@ -518,22 +478,67 @@ public class StreamServiceImpl extends PersistedServiceImpl implements StreamSer
     @Override
     public List<String> streamTitlesForIndexSet(final String indexSetId) {
         List<String> result = new LinkedList<>();
-        mongoCollection(StreamImpl.class)
-                .find(eq(FIELD_INDEX_SET_ID, indexSetId))
-                .projection(fields(
-                        include(FIELD_TITLE),
-                        excludeId()
-                ))
-                .map(doc -> doc.getString(FIELD_TITLE))
-                .forEach(result::add);
+        try (var stream = stream(collection.find(eq(FIELD_INDEX_SET_ID, indexSetId)))) {
+            stream.map(StreamDTO::title).forEach(result::add);
+        }
         return result;
     }
 
-    private BasicDBObject db(String key, Object value) {
-        return new BasicDBObject(key, value);
+    @Override
+    public Map<String, Long> streamRuleCountByStream() {
+        final ImmutableMap.Builder<String, Long> streamRules = ImmutableMap.builder();
+        try (var streamIds = streamAllIds()) {
+            streamIds.forEach(streamId -> {
+                streamRules.put(streamId, streamRuleService.streamRuleCount(streamId));
+            });
+        }
+
+        return streamRules.build();
     }
 
-    private BasicDBObject db(Map<String, Object> map) {
-        return new BasicDBObject(map);
+    private Stream fromDTO(StreamDTO dto) {
+        final List<StreamRule> streamRules = streamRuleService.loadForStreamId(dto.id());
+        final Set<Output> outputs = loadOutputsForRawStream(dto);
+        final IndexSet indexSet = getIndexSet(dto.indexSetId());
+
+        final Map<String, Object> fields = StreamDTO.toMap(dto);
+        return new StreamImpl(new ObjectId(dto.id()), fields, streamRules, outputs, indexSet);
+    }
+
+    private StreamDTO toDTO(Stream stream) {
+        final Date createdAt;
+        // TODO: Clean this up, created_at comes in different forms from different places.
+        final Object createdDate = stream.getFields().get(FIELD_CREATED_AT);
+        if (createdDate instanceof String dateString) {
+            createdAt = Date.from(Instant.parse(dateString));
+        } else if (createdDate instanceof DateTime dateTime) {
+            createdAt = dateTime.toDate();
+        } else if (createdDate instanceof Date date) {
+            createdAt = date;
+        } else {
+            throw new IllegalArgumentException(f("Unexpected type of %s: %s", FIELD_CREATED_AT, createdDate));
+        }
+        final String createdBy = (String) stream.getFields().get(FIELD_CREATOR_USER_ID);
+        final StreamDTO.Builder dtoBuilder = StreamDTO.builder()
+                .id(stream.getId())
+                .creatorUserId(createdBy)
+                .matchingType(stream.getMatchingType().toString())
+                .description(stream.getDescription())
+                .createdAt(createdAt)
+                .disabled(stream.getDisabled())
+                .title(stream.getTitle())
+                .contentPack(stream.getContentPack())
+                .isDefault(stream.isDefaultStream())
+                .removeMatchesFromDefaultStream(stream.getRemoveMatchesFromDefaultStream())
+                .indexSetId(stream.getIndexSetId());
+        if (stream.getOutputs() != null) {
+            dtoBuilder.outputs(stream.getOutputs().stream().map(o -> new ObjectId(o.getId())).toList());
+        }
+        if (stream.getCategories() != null) {
+            dtoBuilder.categories(stream.getCategories());
+        }
+        // Intentionally do not add any StreamRules to the DTO. These are not saved in the streams collection and are
+        // linked from the streamrules collection when queried.
+        return dtoBuilder.build();
     }
 }
